# ds_bluetab_credit_default

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  parameters.yml
data/05_model_input/: X_test_payamt4.csv  X_train_payamt4.csv  y_test_payamt4.csv  y_train_payamt4.csv
data/06_models/: payamt4_model.pkl
data/07_model_output/: payamt4_cv_results.json  payamt4_eval_metrics.json  payamt4_metrics.json  payamt4_predictions.csv
docs/: Prueba Tecnica DS Bluetab.docx
notebooks/: eda_PAY_AMT4.ipynb  eda_default_payment_next_month.ipynb
src/bluetab_test/: __init__.py  __main__.py  settings.py
src/bluetab_test/pipelines/payamt4_evaluating/: __init__.py  nodes.py  pipeline.py
src/bluetab_test/pipelines/payamt4_modeling/: __init__.py  nodes.py  pipeline.py
src/bluetab_test/pipelines/payamt4_preprocessing/: __init__.py  nodes.py  pipeline.py
src/bluetab_test/pipelines/payamt4_reporting/: __init__.py  nodes.py  pipeline.py
tests/pipelines/payamt4_evaluating/: test_pipeline.py
tests/pipelines/payamt4_modeling/: test_pipeline.py
tests/pipelines/payamt4_reporting/: test_pipeline.py
