[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "bluetab_test"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.1.1",
    "pandas>=2.3.3",
]

[project.scripts]
bluetab-test = "bluetab_test.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "bluetab_test.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "bluetab_test"
project_name = "bluetab-test"
kedro_init_version = "1.1.1"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"
