[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "bluetab_test"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.1.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "openpyxl>=3.1.5",
    "xlrd>=1.2.0,<2.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.7",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
    "scikit-posthocs>=0.11.4",
    "tqdm>=4.67.1",
    "kedro-datasets>=9.0.0",
]

[project.scripts]
bluetab-test = "bluetab_test.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "bluetab_test.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "bluetab_test"
project_name = "bluetab-test"
kedro_init_version = "1.1.1"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "8d19a2ea31e34cba9a79efc873393d36"
